[package]
name = "qcli"
version = "0.13.0"
authors = [ "dev@tbco.io" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/the-blockchain-company/quibitous"
homepage = "https://github.com/the-blockchain-company/quibitous#README.md"
documentation = "https://github.com/the-blockchain-company/quibitous#USAGE.md"
description = """
Midgard Serpent
"""
edition = "2018"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.74"
serde_yaml = "0.8"
bincode = "1.3.3"
structopt = "^0.3"
bech32 = "0.8"
hex = "0.4.2"
rayon = "1.5"
base64 = "0.13.0"
chain-core      = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-impl-mockchain = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-addr      = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-crypto    = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-time    = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-vote = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
quibitous-lib = { path = "../quibitous-lib" }
gtmpl = "0.6.0"
ed25519-bip32 = "0.4.1"
thiserror = "1.0"
bytes = "1.1"
rpassword = "5.0"

[features]
evm = ["quibitous-lib/evm"]

[dependencies.clap]
version = "2.33"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls", "json"]

[dev-dependencies]
assert_fs = "1.0"
predicates = "2.0"
quickcheck = "0.9"
# FIXME required to work with quickcheck 0.9. Remove after migrating another crate or newer quickcheck
rand07 = { package = "rand", version = "0.7" }
chain-impl-mockchain = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main", features = [ "property-test-api" ] }

[build-dependencies]
versionisator = "1.0.2"

[lib]
name = "qcli_lib"
path = "src/lib.rs"

[[bin]]
name = "qcli"
path = "src/main.rs"
