[package]
name = "settings"
version = "0.1.0"
authors = ["Robert Mourey Jr <rmourey_jr@blockchain-company.io>"] # author of original package was Nicolas Di Prima
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34"
thiserror = "1.0"
