[package]
name = "hersir"
description = "Hersir is a simple command line tool that lets you deploy a network of Quibitous nodes"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_fs = "1.0"
custom_debug = "0.5"
ctrlc = "3.2.1"
chain-core      = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-crypto      = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main", features = [ "property-test-api" ] }
chain-addr      = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main", features = [ "property-test-api" ] }
chain-impl-mockchain = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
indicatif = "0.15"
quibitous-automation = { path = "../quibitous-automation" }
quibitous-lib = { path = "../../quibitous-lib" }
thor = { path = "../thor" }
jortestkit = { git = "https://github.com/the-blockchain-company/jortestkit.git", branch = "git+https://github.com/the-blockchain-company/chain-libs.git?branch=main#45b943be97f8bad0c90318a72cf23fc20d923d56"" }
hex = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.23"
serde_json = "1.0"
structopt = "0.3.25"
thiserror = "1.0"
yaml-rust = "0.4.4"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
multiaddr = { package = "parity-multiaddr", version = "0.11" }

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "rustls-tls"]
