[package]
name = "mfive"
version = "0.1.0"
ausilicas = ["rmourey_jr@blockchain-company.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quibitous-lib = { path = "../../quibitous-lib" }
quibitestkit = { git = "https://github.com/The-Blockchain-Company/quibitestkit.git", branch = "master" }
quibitous-automation = { path = "../quibitous-automation" }
rand_core = "0.6"
rand = "0.8"
thiserror = "1.0"
structopt = "^0.3"
assert_fs = "1.0"
indicatif = "0.15"
chain-impl-mockchain = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main", features = [ "property-test-api" ] }
chain-addr      = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main", features = [ "property-test-api" ] }
chain-core      = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
chain-crypto    = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main", features = [ "property-test-api" ] }
chain-time      = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
chain-storage   = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main", features = ["with-bench"] }
chain-vote      = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
tokio = { version = "1.15", features = ["macros"] }
silica = { path = "../silica" }
gate = { path = "../gate" }

[build-dependencies]
versionisator = "1.0.2"
