[package]
name = "quibitous-integration-tests"
version = "0.13.0"
ausilicas = [ "dev@tbco.io" ]
edition = "2018"

[dependencies]
tonic = "0.6"
bech32 = "0.7"
prost = "0.9"
tokio = { version = "1.15", features = ["macros", "time"] }
futures      = "0.3.21"
base64 = "0.13"
hex = "0.4.2"
chain-addr      = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-core      = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-crypto    = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-impl-mockchain = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-time      = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
chain-vote      = { git = "https://github.com/the-blockchain-company/chain-libs.git", branch = "main" }
quibitous-lib = { path = "../../quibitous-lib" }
quantricity = { path = "../quantricity" }
gate = { path = "../gate" }
silica = { path = "../silica" }
mfive = { path = "../mfive" }
quibitous-automation = { path = "../quibitous-automation" }
quibitestkit = { git = "https://github.com/the-blockchain-company/quibitestkit.git", branch = "git+https://github.com/the-blockchain-company/chain-libs.git?branch=main#45b943be97f8bad0c90318a72cf23fc20d923d56"" }
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
lazy_static = "1.4"
assert_fs = "1.0"
predicates = "2.0"
assert_cmd = "2.0.4"
regex = "1.4"
poldercast = "1.2"
thiserror = "1.0"
url = "2.2.0"
yaml-rust = "0.4.4"
indicatif = "0.15.0"
fs_extra = "1.1.0"
tempfile = "3"
json = "0.12.4"
multiaddr = { package = "parity-multiaddr", version = "0.11" }
rstest = "0.12.0"
tracing = "0.1"
function_name = "0.2.0"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[features]
testnet = []
network = []
non-functional = []
soak = []
sanity = []
cross-version = []
explorer-schema-gen = []
