[package]
name = "silica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qcli = { path = "../../qcli" }
quibitous-lib = { path = "../../quibitous-lib" }
quibitous-automation = { path = "../quibitous-automation" }
quibitestkit = { git = "https://github.com/The-Blockchain-Company/quibitestkit.git", branch = "main" }
chain-impl-mockchain = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main", features = [ "property-test-api" ] }
chain-addr      = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main", features = [ "property-test-api" ] }
chain-crypto    = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main", features = [ "property-test-api" ] }
chain-core      = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
assert_fs = "1.0"
chain-vote      = { git = "https://github.com/The-Blockchain-Company/chain-libs.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
cocoon = "0.2.4"
dirs = "4.0.0"
serde_yaml = "0.8"
structopt = "0.3"
rand = "0.8"
rand_core = "0.6"
rand_chacha = "0.3"
thiserror = "1.0"
custom_debug = "0.5"
bincode = "1.3"
hex = "0.4"
bech32 = "0.8"
time = { version = "0.3", features = ["macros"] }
